# blackhorse-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
misc/: magic_gen.cpp
src/: board.cpp  board.h  eval.cpp  eval.h  magic.h  main.cpp  move.cpp  move.h  uci.cpp  uci.h
